# CMakeExample

./: .gitignore  CMakeLists.txt  README.md
inc/: other_cpp_file.h
src/: main.cpp  other_cpp_file.cpp
